@@ -19,6 +19,9 @@ wrapper form for slection boxes.
 
 Simple js function to highlight suroudning div of checked radio box.
 
+Improved ldap_sync_users so it first checks ldap for existing entry
+with matching email address before generating epfusername.
+
 
 Version ClaSS-0.9.20 release (2010/5/12)
 -----------------------------------------
